--- a/modules/shared/components/atoms/Box/Box.module.css
+++ b/modules/shared/components/atoms/Box/Box.module.css
@@ -1,3 +1,3 @@
 .box {
-  @apply shadow-soft pb-4 overflow-hidden rounded-md flex flex-col items-center space-y-1;
+  @apply bg-white shadow-soft pb-4 overflow-hidden rounded-md flex flex-col items-center space-y-1;
 }
